Changing the mail

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <section class="section-contact" id="contact">
                 <h2>Contact</h2>
                 <p>Feel free to get in touch.</p>
-                <form method="post" action="mail.php" class="contact-form">
+                <form method="post" action="https://formspree.io/michal.ambrozewicz@gmail.com" class="contact-form">
                     <input type="text" name="name" placeholder="Your name" required>
                     <input type="text" name="company" placeholder="Company name">
                     <input type="email" name="email" placeholder="Your email" required>
