Changing the way of sending messages

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                     <input type="phone" name="phone" placeholder="Your phone number">  
                     <textarea name="message" placeholder="Your message" required></textarea>
                     <input type="submit" value="Send it!" class="btn">     
+                    <p>Via https://formspree.io/</p>
                 </form>
             </section>
             <footer>
