Some problems fixed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <script src="https://unpkg.com/ionicons@4.4.2/dist/ionicons.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="js/jquery.scrollTo.min.js"></script>
-        <script src="js/app.js"></script>
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -106,14 +105,12 @@
                 <div class="articles-container">
                     <article class="project-preview">
                         <figure>
-                            <a href="https://iambro.github.io/Memory-Game/" alt="Memory Game about Premier League for 2 players!" target="_blank"><img src="css/img/memory.png" alt="Memory Game about Premier League for 2 players!"></a>
-                            <p class="text">Memory Game about Premier League for 2 players!</p>
+                            <a href="https://iambro.github.io/Memory-Game/" alt="Memory Game about Premier League for 2 players!" target="_blank"><img src="css/img/memory.png" alt="Memory Game about Premier League for 2 players!"><p class="text">Memory Game about Premier League for 2 players!</p></a>                            
                         </figure>
                     </article>
                     <article class="project-preview">
                         <figure>
-                            <a href="https://iambro.github.io/ICAO/" alt="ICAO spelling alphabet" target="_blank"><img src="css/img/icao.png" alt="ICAO spelling alphabet"></a>
-                            <p class="text">ICAO spelling alphabet</p>
+                            <a href="https://iambro.github.io/ICAO/" alt="ICAO spelling alphabet" target="_blank"><img src="css/img/icao.png" alt="ICAO spelling alphabet"><p class="text">ICAO spelling alphabet</p></a>                            
                         </figure>
                     </article>
                 </div>
