--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <article id="education">
                         <ion-icon name="school"></ion-icon>
                         <h3>EDUCATION</h3>
-                        <p>In 2018 I have completed my bachelor`s degree in Civil Engineering at Gdańsk University of Technology.<br><br>LANGUAGES: English: B2+, German: A2, Polish: native</p>
+                        <p>In 2018 I have completed my bachelor`s degree in Civil Engineering at Gdańsk University of Technology.<br><br>LANGUAGES: English: C1, German: A2, Polish: native</p>
                     </article>
                     <article id="location">
                         <ion-icon name="compass"></ion-icon>
