1. Added new pictures and elements to section projects. 2. Added new pictures and elements to section technology. 3. Edited text in section about me. 4. Changed media queries to the new elements.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         <figure>
                             <img src="css/img/poland-contour.png" alt="localization" width="50%" height="auto">
                         </figure>
+                        <p>I am able to consider relocation.</p>
                     </article>
                     <article id="goals">
                         <ion-icon name="locate"></ion-icon>
@@ -64,35 +65,47 @@
             <section class="section-technologies" id="technologies">
                 <h2>Technologies</h2>
                 <div class="articles-container">
-                    <article id="html">
+                    <article class="bottomRight">
                         <figure>
                             <img src="css/img/html-logo.png" alt="html5-logo">
-                            <p>Semantic code</p>
                         </figure>
                     </article>
-                    <article id="css">
+                    <article class="bottomRight">
                         <figure>
                             <img src="css/img/css-logo.png" alt="css3-logo">
-                            <p>I am a big Flexbox enthusiast, but I can use Grid as well. RWD is a priority. Using Media Queries.</p>
                         </figure>
                     </article>
-                    <article id="js">
+                    <article class="bottom">
                         <figure>
-                            <img src="css/img/js-logo.png" alt="js-logo">
-                            <p>I know syntax, basic constructs and how to manipulate DOM. Still improving my knowledge.</p>
+                            <img src="css/img/js-logo.png" alt="js-logo">            
                         </figure>
                     </article>
-                    <article id="jquery">
+                    <article class="bottomRight">
+                        <figure>
+                            <img src="css/img/sass-logo.png" alt="sass-logo">
+                        </figure>
+                    </article>
+                    <article class="bottomRight">
+                        <figure>
+                            <img src="css/img/react-logo.png" alt="react-logo">
+                        </figure>
+                    </article>
+                    <article class="bottom">
                         <figure>
                             <img src="css/img/jquery-logo.png" alt="jquery-logo">
                         </figure>
                     </article>
-                    <article id="github">
+                    <article class="right">
+                        <figure>
+                            <img src="css/img/bootstrap-logo.png" alt="bootstrap-logo">
+                        </figure>
+                    </article>
+                    <article class="right">
                         <figure>
                             <img src="css/img/github-logo.png" alt="github-logo">
                         </figure>
                     </article>
-                    <article id="ps">
+                    <article>
                         <figure>
                             <img src="css/img/ps-logo.png" alt="photoshop-logo">
                         </figure>
@@ -101,15 +114,36 @@
             </section> 
             <section class="section-projects" id="projects">
                 <h2>Projects</h2>
+                <p>All project and code you can find on my <a href="https://github.com/iambro" target="_blank">GitHub</a></p>
                 <div class="articles-container">
                     <article class="project-preview">
                         <figure>
-                            <a href="https://iambro.github.io/Memory-Game/" alt="Memory Game about Premier League for 2 players!" target="_blank"><img src="css/img/memory.png" alt="Memory Game about Premier League for 2 players!"><p class="text">Memory Game about Premier League for 2 players!</p></a>                            
+                            <a href="https://iambro.github.io/Fit-Calculator-React/" target="_blank"><img src="css/img/fitcalculator.png" alt="fit-calculator"><p class="text">An application calculating estimated energy requirements and helping set your goals. Made with React.</p></a>                            
                         </figure>
                     </article>
                     <article class="project-preview">
                         <figure>
-                            <a href="https://iambro.github.io/ICAO/" alt="ICAO spelling alphabet" target="_blank"><img src="css/img/icao.png" alt="ICAO spelling alphabet"><p class="text">ICAO spelling alphabet</p></a>                            
+                            <a href="https://iambro.github.io/ICAO/" target="_blank"><img src="css/img/icao.png" alt="icao"><p class="text">ICAO alphabet that allows spelling out messages assigning code words to each letter</p></a>                            
+                        </figure>
+                    </article>
+                    <article class="project-preview">
+                        <figure>
+                            <a href="https://iambro.github.io/Memory-Game/" target="_blank"><img src="css/img/memory.png" alt="memory-game"><p class="text">Memory Game about Premier League for 2 players!</p></a>                            
+                        </figure>
+                    </article>
+                    <article class="project-preview">
+                        <figure>
+                            <a href="https://iambro.github.io/Hangman-Game/" target="_blank"><img src="css/img/hangman.png" alt="hangman-game"><p class="text">Simple hangman game with passwords passed through API.</p></a>                            
+                        </figure>
+                    </article>
+                    <article class="project-preview">
+                        <figure>
+                            <a href="https://iambro.github.io/Form-Builder/" target="_blank"><img src="css/img/formbuilder.png" alt="form-builder"><p class="text">An application made with React as a recruitment task.</p></a>                            
+                        </figure>
+                    </article>
+                    <article class="project-preview">
+                        <figure>
+                            <a href="https://iambro.github.io/Habagroup-web-page/" target="_blank"><img src="css/img/webpage.png" alt="ICAO spelling alphabet"><p class="text">A simple web page made as a recruitment task.</p></a>                            
                         </figure>
                     </article>
                 </div>
